syntax = "proto3";

package sonr.wallet;
option go_package = "github.com/sonr-io/core/internal/wallet";

enum KeyType {
	RSA = 0;
	Ed25519 = 1;
	Secp256k1 = 2;
	ECDSA = 3;
}

enum KeyChainCategory {
	LIBP2P = 0;
	HDNS = 1;
	TEXTILE = 2;
	ETHEREUM = 3;
}

message PublicKey {
	KeyType Type = 1;
	bytes Data = 2;
}

message PrivateKey {
	KeyType Type = 1;
	bytes Data = 2;
}

message KeyPair {
	string Name = 1;
	KeyType Type = 2;
	PublicKey Public = 3;
	PrivateKey Private = 4;
}

message KeyChain {
	repeated KeyPair Keys = 1;
	KeyChainCategory Category = 2;
	string Path = 3;
	int64 LastModified = 4;
}
